--- a/SchoolProject.Core/SharedResourcing/SharedResources.Ar.resx
+++ b/SchoolProject.Core/SharedResourcing/SharedResources.Ar.resx
@@ -135,6 +135,15 @@
   <data name="DepartmentIdIsNotExist" xml:space="preserve">
     <value>رقم القسم غير موجود  </value>
   </data>
+  <data name="EmailIsExist" xml:space="preserve">
+    <value>الإيميل موجود مسبقاً</value>
+  </data>
+  <data name="FailedUserRegister" xml:space="preserve">
+    <value>فشل إضافة مستخدم جديد</value>
+  </data>
+  <data name="InvalidEmail" xml:space="preserve">
+    <value>خطأ في الإيميل </value>
+  </data>
   <data name="IsExist" xml:space="preserve">
     <value>هو موجود </value>
   </data>
@@ -153,6 +162,9 @@
   <data name="NotFound" xml:space="preserve">
     <value>غير متوفر</value>
   </data>
+  <data name="PasswardNoEqualsConfirmPass" xml:space="preserve">
+    <value>كلمة السر غير متطابقة </value>
+  </data>
   <data name="Required" xml:space="preserve">
     <value>هذا الحقل مطلوب</value>
   </data>
@@ -167,5 +179,8 @@
   </data>
   <data name="Update" xml:space="preserve">
     <value>تم التعديل بنجاح </value>
+  </data>
+  <data name="UserNameIsExist" xml:space="preserve">
+    <value>اسم المستخدم موجود مسبقاً</value>
   </data>
 </root>
