--- a/SchoolProject.Core/SharedResourcing/SharedResources.En.resx
+++ b/SchoolProject.Core/SharedResourcing/SharedResources.En.resx
@@ -138,6 +138,9 @@
   <data name="EmailIsExist" xml:space="preserve">
     <value>Email Is Exist</value>
   </data>
+  <data name="FailedUpdated" xml:space="preserve">
+    <value>Failed Updated !</value>
+  </data>
   <data name="FailedUserRegister" xml:space="preserve">
     <value>Failed User Register !</value>
   </data>
